--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "http://hatbann.github.io/fishroom"
+  "homepage": "http://hatbann.github.io/fishroom/"
 }
